--- a/res/layout/activity_login_page.xml
+++ b/res/layout/activity_login_page.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.main.divvyup.LoginPage" >
+    tools:context="com.main.divvyapp.LoginPage" >
 
     <TextView
         android:id="@+id/textView1"
