--- a/res/layout/activity_login_page.xml
+++ b/res/layout/activity_login_page.xml
@@ -72,14 +72,25 @@
         <requestFocus />
     </EditText>
 
-
     <Button
         android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@+id/skip"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="31dp"
         android:text="@string/Login" />
+
+    <Button
+        android:id="@+id/skip"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/email"
+        android:layout_alignEnd="@+id/email"
+        android:layout_marginBottom="16dp"
+        android:text="@string/skip"
+        android:onClick="goToDealsPageAndFinish" />
 
 </RelativeLayout>
