--- a/res/layout/activity_deals_page.xml
+++ b/res/layout/activity_deals_page.xml
@@ -21,6 +21,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="170dp"
         android:layout_toRightOf="@+id/textView1"
+        android:layout_toEndOf="@+id/textView1"
         android:text="moveToFindMatch" />
 
 </RelativeLayout>
