--- a/res/layout/activity_deals_page.xml
+++ b/res/layout/activity_deals_page.xml
@@ -1,27 +1,71 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="#fff"
+    android:orientation="vertical"
+    android:weightSum="100"
     tools:context="com.main.divvyapp.DealsPage" >
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
+<LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:orientation="horizontal"
+        android:paddingBottom="10dp"
+        android:weightSum="100" 
+        android:background="#ff45">
 
-    <Button
-        android:id="@+id/moveToFindMatch"
-        android:layout_width="wrap_content"
+        <TextView
+            style="@style/AppBaseTheme"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            android:layout_weight="12.54"
+            android:gravity="center_vertical"
+            android:text="@string/id" />
+
+        <TextView
+            style="@style/AppBaseTheme"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            android:layout_weight="22"
+            android:gravity="center_vertical"
+            android:text="@string/claimedBy" />
+
+        <TextView
+            style="@style/AppBaseTheme"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            android:layout_weight="22"
+            android:gravity="center_vertical"
+            android:text="@string/picture" />
+
+        <TextView
+            style="@style/AppBaseTheme"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            android:layout_weight="22"
+            android:gravity="center_vertical"
+            android:text="@string/storeid" />
+        
+        <TextView
+            style="@style/AppBaseTheme"
+            android:layout_width="0px"
+            android:layout_height="match_parent"
+            android:layout_weight="22"
+            android:gravity="center_vertical"
+            android:text="@string/deadLine" />
+
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/mainList"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="170dp"
-        android:layout_toRightOf="@+id/textView1"
-        android:layout_toEndOf="@+id/textView1"
-        android:text="moveToFindMatch" />
+        android:cacheColorHint="#00000000"
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        android:listSelector="#00000000"
+        android:orientation="vertical" >
+    </ListView>
 
-</RelativeLayout>
+</LinearLayout>
