--- a/res/layout/activity_deals_page.xml
+++ b/res/layout/activity_deals_page.xml
@@ -1,3 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
@@ -20,6 +23,8 @@
         android:orientation="vertical" >
     </ListView>
 -->
+
+
    
     <GridView 
     android:id="@+id/mainList"
@@ -32,6 +37,9 @@
     android:stretchMode="columnWidth"
     android:gravity="center"
     />
+
+            
+   
      
 
 
