add deal button, deal pictures added, bug fixed

--- a/res/layout/activity_store_page.xml
+++ b/res/layout/activity_store_page.xml
@@ -1,3 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
@@ -6,10 +9,11 @@
     android:background="#fff"
     android:orientation="vertical"
     android:weightSum="100"
-    tools:context="com.main.divvyapp.DealsPage" >
- <!--
+    tools:context="com.main.divvyapp.StorePage" >
+
+  <!--    
     <ListView
-        android:id="@+id/dealList"
+        android:id="@+id/mainList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:cacheColorHint="#00000000"
@@ -18,17 +22,25 @@
         android:listSelector="#00000000"
         android:orientation="vertical" >
     </ListView>
-  -->
-        
-    <GridView
-        android:id="@+id/dealList"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:columnWidth="90dp"
-        android:gravity="center_horizontal|fill_horizontal"
-        android:horizontalSpacing="100dp"
-        android:numColumns="auto_fit"
-        android:stretchMode="spacingWidth"
-        android:verticalSpacing="100dp" />
+-->
+
+
+   
+    <GridView 
+    android:id="@+id/dealList"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:columnWidth="90dp"
+    android:numColumns="auto_fit"
+    android:verticalSpacing="10dp"
+    android:horizontalSpacing="10dp"
+    android:stretchMode="columnWidth"
+    android:gravity="center"
+    />
+
+            
+   
+     
+
 
 </LinearLayout>
